# toutiao-money

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.claude/skills/: toutiao-comment.skill
.claude/skills/temp-files/: SKILL.md
.claude/skills/toutiao-agent/: SKILL.md
.claude/skills/toutiao-agent/references/: ACTIVITY.md  CLI.md  COMMENT.md  CONFIG.md  DATABASE.md  INSTALL.md  LOGIN.md  MICRO_HEADLINE.md  NOTICES.md  data-structures.md  login-flow.md  micro-headline-flow.md  troubleshooting.md
.claude/skills/toutiao-comment/: SKILL.md
.claude/skills/toutiao-explorer/: SKILL.md
.claude/skills/toutiao-inspiration/: SKILL.md
.pm/: config.md
.pm/cache/: last-updated.json
.pm/competitors/: octopus-rpa.md  riona-ai-agent.md  ttbot.md
.pm/gaps/: 2025-02-11-analysis.md
.pm/prds/: activity-fetcher.md  article-read-count-filter.md  micro-headline-posting.md
.pm/product/: inventory.md
data/: comments.db
docs/plans/: 2025-02-05-toutiao-agent-design.md  2025-02-05-toutiao-login-skill-design.md  2025-02-06-sqlite-comment-storage-design.md  2025-02-06-sqlite-comment-storage-implementation.md  2025-02-12-activity-intelligent-participation-design.md  2025-02-12-activity-intelligent-participation.md
prompts/: comment_generation.txt  micro_headline_generation.txt
scripts/: publish_activity_micro_headline.py  research_activities.py
src/toutiao_agent/: activity_analyzer.py  activity_fetcher.py  activity_types.py  config.py  generator.py  main.py  mcp_client.py  storage.py  toutiao_client.py
(+19 files in other folders)
